добавлена поддержка щелемеров

--- a/TelemipAdapter/Views/Shared/_Layout.cshtml
+++ b/TelemipAdapter/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Incls" asp-action="Index">Инклинометры</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Gaps" asp-action="Index">Щелемеры</a>
+                        </li>
                     </ul>
                 </div>
             </div>
