--- a/TelemipAdapter/Views/Home/Index.cshtml
+++ b/TelemipAdapter/Views/Home/Index.cshtml
@@ -2,7 +2,383 @@
     ViewData["Title"] = "Главная";
 }
 
-    <div class="text-center">
-        <h3>ТелеМИП Адаптер</h3>
-        <a href="demo.telemip.ru:3000">Dashboard</a>
+﻿
+<script src="~/js/SpryTabbedPanels.js" type="text/javascript"></script>
+<link href="~/css/SpryTabbedPanels.css" rel="stylesheet" type="text/css" />
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+<h1>Аппаратная часть системы деформационного контроля (АСДК)</h1>
+<p>
+    Наша компания производит специализированные датчики, позволяющие в заданные интервалы времени передавать данные о состоянии наблюдаемых элементов конструкций:
+    <ul>
+        <li>
+            изменение геометрии трещин
+            <ul>
+                <li><a href="#optic_gap_sensor">Щелеметр (трещиномер) оптический</a></li>
+                <li><a href="#magnit_gap_sensor">Щелеметр (трещиномер) магнитный</a></li>
+            </ul>
+        </li>
+        <li>
+            крен (отклонение элементов конструкций от вертикали)
+            <ul>
+                <li><a href="#tilt_sensor">Инклинометр двухосевой</a></li>
+            </ul>
+        </li>
+        <li>контроль уровня воды</li>
+        <li>изменение температуры, относительной влажности, давления и мн. др.</li>
+    </ul>
+</p>
+<p>&nbsp;</p>
+<hr>
+<h2><a name="optic_gap_sensor" id="optic_gap_sensor"></a>Щелеметр (трещиномер) оптический</h2>
+<div id="TabbedPanels1" class="TabbedPanels">
+    <ul class="TabbedPanelsTabGroup">
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Описание</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Особенности</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Принцип действия</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Монтаж</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Характеристики</strong></li>
+    </ul>
+    <div class="TabbedPanelsContentGroup">
+        <div class="TabbedPanelsContent">Щелеметр  (трещиномер) оптический<strong> </strong>предназначен  для измерения раскрытия трещин и стыков зданий и сооружений. Осуществляет контроль линейной деформации объектов,  т.е. измерение ширины раскрытия трещины и передает результаты измерений на  удаленный сервер. </div>
+        <div class="TabbedPanelsContent">Возможность беспроводной передачи фиксируемых данных на сервер (GSM/SIM ready), автономное электропитание, высокая надёжность и широкая сфера применения. Благодаря высокому классу пылевлагозащиты (IP 64) - применяются как внутри помещения, так и на улице.</div>
+        <div class="TabbedPanelsContent">Принцип действия датчика основан на преобразовании линейного перемещения в угловое. Поступательное движение рейки, преобразуется во вращательное движение вала энкодера. Абсолютный энкодер фиксирует текущее положение вала и преобразует его в цифровой вид. Микропроцессор считывает значение с энкодера, формирует пакет данных для отправки и передает соответствующие данные на GSM модуль. GSM модуль осуществляет отправку данных по протоколу GPRS на Web-сервер для последующей обработки и хранения.</div>
+        <div class="TabbedPanelsContent">Щелемер устанавливается поперек измеряемой трещины, стыка, шва. Крепление зависит от типа установочной поверхности и материала конструкции. Монтаж осуществляется как специалистами ООО «ТелеМИП», так и силами Заказчика, после соответствующих консультаций.</div>
+        <div class="TabbedPanelsContent">
+            <table bgcolor="white" cols="2" bordercolor="black" rules="rows">
+                <tr>
+                    <td><b>Наименование показателя</b></td>
+                    <td><b>Значение показателя</b></td>
+                </tr>
+                <tr>
+                    <td>Габаритные размеры (ДхШхВ), мм, не более:</td>
+                    <td>320х85х78</td>
+                </tr>
+                <tr>
+                    <td>Масса, г не более </td>
+                    <td>920</td>
+                </tr>
+                <tr>
+                    <td>Диапазоны измерений, мм</td>
+                    <td>0 – 300</td>
+                </tr>
+                <tr>
+                    <td>Пределы допускаемой погрешности измерений, мм</td>
+                    <td>±0,05</td>
+                </tr>
+                <tr>
+                    <td>Шаг измерения, мм</td>
+                    <td>0,1</td>
+                </tr>
+                <tr>
+                    <td>Протокол передачи данных</td>
+                    <td>GSM</td>
+                </tr>
+                <tr>
+                    <td>Электрическое питание</td>
+                    <td>от источника постоянного тока </td>
+                </tr>
+                <tr>
+                    <td>Диапазон допустимого напряжения питания, В</td>
+                    <td>3,5 – 3,7</td>
+                </tr>
+                <tr>
+                    <td>Средний срок службы, лет</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>Наработка на отказ, ч</td>
+                    <td>15000</td>
+                </tr>
+                <tr>
+                    <td>Расчётное  время работы от одного источника постоянного тока при интервале опроса 1,5 часа,  не менее, мес.</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>Степень пылевлагозащиты по ГОСТ 14254</td>
+                    <td>IP64</td>
+                </tr>
+                <tr>
+                    <td>
+                        Условия эксплуатации:<br />
+                        при температуре окружающей среды, &deg;С<br />
+                        относительная влажность воздуха при температуре +30 &deg;С, %
+                    </td>
+                    <td>
+                        <br />
+                        -25…+40<br />
+                        0… (93±1)
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
+</div>
+<p align="center"><img src="~/img/gap.png" alt="Щелемер оптический" width="60%" style="margin: 10px;" />  </p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<hr>
+<h2><a name="tilt_sensor" id="tilt_sensor"></a>Двухосевой инклинометр</h2>
+<div id="TabbedPanels2" class="TabbedPanels">
+    <ul class="TabbedPanelsTabGroup">
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Описание</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Особенности</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Принцип действия</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Монтаж</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Характеристики</strong></li>
+    </ul>
+    <div class="TabbedPanelsContentGroup">
+        <div class="TabbedPanelsContent">Двухосевой инклинометр предназначен для измерения углов наклона ограждающих (несущих) конструкций – стен, балок, опор и мн. др. в диапазоне ± 30&deg; по двум независимым осям. В зависимости от требований к дальности передачи, датчик может иметь встроенную, либо внешнюю антенну. Используется в составе автоматизированной системы деформационного контроля (АСДК), производства ООО «ТелеМИП».</div>
+        <div class="TabbedPanelsContent">Возможность беспроводной передачи фиксируемых данных на сервер (GSM/SIM ready), малые габариты, автономное электропитание, высокая надёжность и широкая сфера применения. Благодаря высокому классу пылевлагозащиты (IP 65) - применяются как внутри помещения, так и на улице.</div>
+        <div class="TabbedPanelsContent">Чувствительный элемент инклинометра выполнен по интегральной технологии MEMS (Микро Электрическая Механическая Система). Принцип действия инклинометра основан на зависимости выходного сигнала чувствительного элемента от его положения относительно вектора ускорения. Полученный таким образом сигнал обрабатывается и передаётся в АСДК.</div>
+        <div class="TabbedPanelsContent">Рекомендуется производить на вертикальной поверхности при помощи саморезов или других крёпежных метизов в зависимости от типа поверхности.</div>
+        <div class="TabbedPanelsContent">
+            <table bgcolor="white" cols="2" bordercolor="black" rules="rows">
+                <tr>
+                    <td><b>Наименование показателя</b></td>
+                    <td><b>Значение показателя</b></td>
+                </tr>
+                <tr>
+                    <td>Габаритные размеры (ДхШхВ), мм, не более (без учёта антенны):</td>
+                    <td>145х92х55</td>
+                </tr>
+                <tr>
+                    <td>
+                        Масса, г не более c элементом питания<br />
+                        без элемента питания
+                    </td>
+                    <td>
+                        350<br />
+                        250
+                    </td>
+                </tr>
+                <tr>
+                    <td>Диапазон измерений, &deg;</td>
+                    <td>±30</td>
+                </tr>
+                <tr>
+                    <td>Пределы допускаемой погрешности измерений, &deg;</td>
+                    <td>±0,2</td>
+                </tr>
+                <tr>
+                    <td>Шаг измерения, &deg;</td>
+                    <td>0,035</td>
+                </tr>
+                <tr>
+                    <td>Протокол передачи данных (опционально)</td>
+                    <td>ZigBee, GSM</td>
+                </tr>
+                <tr>
+                    <td>Электрическое питание</td>
+                    <td>Гальванический элемент</td>
+                </tr>
+                <tr>
+                    <td>Диапазон допустимого напряжения питания, В</td>
+                    <td>3,3 – 3,65</td>
+                </tr>
+                <tr>
+                    <td>Тип используемых элементов питания</td>
+                    <td>LSH 20 (3,6 В, 13 Ач),LS33600 (3,6 В, 18 Ач),ER34615 (3,6 В, 18 Ач),ER34615M (3,6 В, 13 Ач)</td>
+                </tr>
+                <tr>
+                    <td>
+                        Потребляемый ток при напряжении питания 3,6 В, мА, в режиме:<br />
+                        рабочем, не более<br />
+                        сна, не более
+                    </td>
+                    <td>
+                        <br />
+                        100<br />
+                        0.1
+                    </td>
+                </tr>
+                <tr>
+                    <td>Диапазон измерений температуры, &deg;C</td>
+                    <td>40÷+80</td>
+                </tr>
+                <tr>
+                    <td>Шаг измерений температуры, &deg;C</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Средний срок службы, лет</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>Наработка на отказ, ч</td>
+                    <td>15000</td>
+                </tr>
+                <tr>
+                    <td>Расчётное время работы от одного элемента питания при частоте опроса раз в 1,5 часа, мес.</td>
+                    <td>24</td>
+                </tr>
+                <tr>
+                    <td>Степень пылевлагозащиты по ГОСТ 14254</td>
+                    <td>IP65</td>
+                </tr>
+                <tr>
+                    <td>
+                        Условия эксплуатации:<br />
+                        при температуре окружающей среды, &deg;С<br />
+                        относительная влажность воздуха при температуре +30&deg;С, %
+                    </td>
+                    <td>
+                        <br />
+                        -40…+50<br />
+                        0… (93±1)
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+<p align="center"><img src="~/img/incl.png" alt="Инклинометр" height="60%" style="margin: 10px;" /></p>
+<p>&nbsp;</p>
+<hr>
+<h2><a name="magnit_gap_sensor" id="magnit_gap_sensor"></a>Щелеметр (трещиномер) магнитный</h2>
+<div id="TabbedPanels3" class="TabbedPanels">
+    <ul class="TabbedPanelsTabGroup">
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Описание</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Особенности</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Принцип действия</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Монтаж</strong></li>
+        <li class="TabbedPanelsTab" tabindex="0"><strong>Характеристики</strong></li>
+    </ul>
+    <div class="TabbedPanelsContentGroup">
+        <div class="TabbedPanelsContent">Щелеметр (трещиномер) магнитный предназначен для высокоточного измерения динамики раскрытия трещин элементов конструкций. Осуществляет контроль линейной деформации, т.е. измерение ширины раскрытия трещины и передает результаты измерений на удаленный сервер. Благодаря использованию магнитного интегрального датчика позволяет измерять ширину раскрытия с точностью до микрона (10<sup>-3</sup> мм). Используется в составе автоматизированной системы деформационного контроля (АСДК), производства ООО «ТелеМИП».</div>
+        <div class="TabbedPanelsContent">Высокая точность измерения (1,2 мкм). Возможность беспроводной передачи фиксируемых данных на сервер (GSM/SIM ready), автономное электропитание, высокая надёжность и широкая сфера применения. Благодаря высокому классу пылевлагозащиты (IP 65) - применяются как внутри помещения, так и на улице.</div>
+        <div class="TabbedPanelsContent">Корпус датчика и его подвижная рейка закрепляются на противоположных берегах трещины.  На рейке датчика закреплена магнитная шкала, положение которой при перемещении рейки фиксируется интегральным датчиком положения по магнитному полю. По данным от интегрального датчика микроконтроллер вычисляет значение изменения размера трещины со времени начала наблюдения. Затем данные привязываются ко времени и сохраняются в ПЗУ устройства. Передачу данных на сервер осуществляет  беспроводной приёмопередающий модуль под управлением микроконтроллера. В случае если беспроводной канал связи по каким-то причинам недоступен, данные измерений передаются во время ближайшего следующего успешного сеанса связи.</div>
+        <div class="TabbedPanelsContent">Щелемер устанавливается поперек измеряемой трещины, стыка, шва. Крепление зависит от типа установочной поверхности и материала конструкции. Монтаж осуществляется как специалистами ООО «ТелеМИП», так и силами Заказчика, после соответствующих консультаций.</div>
+        <div class="TabbedPanelsContent">
+            <table bgcolor="white" cols="2" bordercolor="black" rules="rows">
+                <tr>
+                    <td><b>Наименование показателя</b></td>
+                    <td><b>Значение показателя</b></td>
+                </tr>
+                <tr>
+                    <td>Габаритные размеры (ДхШхВ), мм, не более (без учёта антенны):</td>
+                    <td>70х56х55</td>
+                </tr>
+                <tr>
+                    <td>
+                        Масса, г не более c элементом питания<br />
+                        без элемента питания
+                    </td>
+                    <td>
+                        500<br />
+                        380
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Диапазон измерений, мм<br />
+                        ТД-М-Х-30-ХХ<br />
+                        ТД-М-Х-50-ХХ<br />
+                        ТД-М-Х-90-ХХ
+                    </td>
+                    <td>
+                        <br />
+                        ±30<br />
+                        ±50<br />
+                        ±90
+                    </td>
+                </tr>
+                <tr>
+                    <td>Пределы допускаемой погрешности измерений, мкм</td>
+                    <td>±0,7</td>
+                </tr>
+                <tr>
+                    <td>
+                        Шаг измерения, мм<br />
+                        ТД-М-Х-ХХ-01,мм<br />
+                        ТД-М-Х-ХХ-02,мкм
+                    </td>
+                    <td>
+                        <br />
+                        0.01<br />
+                        1.2
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Протокол передачи данных <br />
+                        ТД-М-1-Х-ХХ<br />
+                        ТД-М-1-Х-ХХ<br />
+                        ТД-М-1-Х-ХХ
+                    </td>
+                    <td>
+                        <br />
+                        GSM<br />
+                        Ethernet<br />
+                        ZigBee
+                    </td>
+                </tr>
+                <tr>
+                    <td>Электрическое питание</td>
+                    <td>Гальванический элемент</td>
+                </tr>
+                <tr>
+                    <td>Диапазон допустимого напряжения питания, В</td>
+                    <td>3,5 – 3,7</td>
+                </tr>
+                <tr>
+                    <td>Тип используемых элементов питания</td>
+                    <td>LSH 20 (3,6 В, 13 Ач),LS33600 (3,6 В, 18 Ач),ER34615 (3,6 В, 18 Ач),ER34615M (3,6 В, 13 Ач)</td>
+                </tr>
+                <tr>
+                    <td>
+                        Потребляемый ток при напряжении питания 3,6 В, мА, в режиме:<br />
+                        рабочем, не более<br />
+                        сна, не более
+                    </td>
+                    <td>
+                        <br />
+                        100<br />
+                        0.1
+                    </td>
+                </tr>
+                <tr>
+                    <td>Диапазон измерений температуры, &deg;C</td>
+                    <td>40÷+80</td>
+                </tr>
+                <tr>
+                    <td>Шаг измерений температуры, &deg;C</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Средний срок службы, лет</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>Наработка на отказ, ч</td>
+                    <td>15000</td>
+                </tr>
+                <tr>
+                    <td>Расчётное время работы от одного элемента питания при частоте опроса раз в 1,5 часа, мес.</td>
+                    <td>9</td>
+                </tr>
+                <tr>
+                    <td>Степень пылевлагозащиты по ГОСТ 14254</td>
+                    <td>IP65</td>
+                </tr>
+                <tr>
+                    <td>
+                        Условия эксплуатации:<br />
+                        при температуре окружающей среды, &deg;С<br />
+                        относительная влажность воздуха при температуре +30 &deg;С, %
+                    </td>
+                    <td>
+                        <br />
+                        -40…+50<br />
+                        0… (93±1)
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+<p>&nbsp;</p><p align="center"><img src="~/img/mgap.png" width="60%" /></p>
+<script type="text/javascript">var TabbedPanels1 = new Spry.Widget.TabbedPanels("TabbedPanels1");
+var TabbedPanels2 = new Spry.Widget.TabbedPanels("TabbedPanels2");
+var TabbedPanels3 = new Spry.Widget.TabbedPanels("TabbedPanels3");</script>
