--- a/TelemipAdapter/Views/Gaps/Delete.cshtml
+++ b/TelemipAdapter/Views/Gaps/Delete.cshtml
@@ -4,36 +4,42 @@
     ViewData["Title"] = "Удалить";
 }
 
-<h1>Delete</h1>
+@*<h1>Delete</h1>*@
 
 <h3>Вы уверены, что хотите удалить щелемер?</h3>
 <div>
-    <h4>Gap</h4>
+    @*<h4>Gap</h4>*@
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.InitValue)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.InitValue)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Value)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Value)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Period)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Period)
-        </dd>
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
+        <a asp-action="Index">Возвратиться к списку</a>
     </form>
 </div>
