--- a/TelemipAdapter/Views/Gaps/Index.cshtml
+++ b/TelemipAdapter/Views/Gaps/Index.cshtml
@@ -13,11 +13,14 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.InitValue)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Value)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Period)
             </th>
@@ -28,11 +31,14 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.InitValue)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Value)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Period)
             </td>
