--- a/TelemipAdapter/Views/Incls/Delete.cshtml
+++ b/TelemipAdapter/Views/Incls/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.InitX)
         </dt>
         <dd class="col-sm-10">
@@ -40,12 +46,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Period)
-        </dd>
+        </dd>*@
     </dl>
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
         <a asp-action="Index">Возвратиться к списку</a>
     </form>
 </div>
