--- a/TelemipAdapter/Views/Incls/Edit.cshtml
+++ b/TelemipAdapter/Views/Incls/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="InitX" class="control-label"></label>
                 <input asp-for="InitX" class="form-control" />
                 <span asp-validation-for="InitX" class="text-danger"></span>
@@ -31,7 +31,7 @@
                 <label asp-for="Y" class="control-label"></label>
                 <input asp-for="Y" class="form-control" readonly />
                 <span asp-validation-for="Y" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Period" class="control-label"></label>
                 <input asp-for="Period" class="form-control" />
@@ -39,7 +39,7 @@
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
     </div>
