ширина картинки инкоинометра

--- a/TelemipAdapter/Views/Home/Index.cshtml
+++ b/TelemipAdapter/Views/Home/Index.cshtml
@@ -233,7 +233,7 @@
         </div>
     </div>
 </div>
-<p align="center"><img src="~/img/incl.png" alt="Инклинометр" height="60%" style="margin: 10px;" /></p>
+<p align="center"><img src="~/img/incl.png" alt="Инклинометр" width="60%" style="margin: 10px;" /></p>
 <p>&nbsp;</p>
 <hr>
 <h2><a name="magnit_gap_sensor" id="magnit_gap_sensor"></a>Щелеметр (трещиномер) магнитный</h2>
