--- a/TelemipAdapter/Views/Incls/Edit.cshtml
+++ b/TelemipAdapter/Views/Incls/Edit.cshtml
@@ -12,22 +12,22 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="InitX" class="control-label"></label>
                 <input asp-for="InitX" class="form-control" />
                 <span asp-validation-for="InitX" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="X" class="control-label"></label>
                 <input asp-for="X" class="form-control" readonly />
                 <span asp-validation-for="X" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="InitY" class="control-label"></label>
                 <input asp-for="InitY" class="form-control" />
                 <span asp-validation-for="InitY" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Y" class="control-label"></label>
                 <input asp-for="Y" class="form-control" readonly />
                 <span asp-validation-for="Y" class="text-danger"></span>
