--- a/TelemipAdapter/Views/Shared/_Layout.cshtml
+++ b/TelemipAdapter/Views/Shared/_Layout.cshtml
@@ -31,9 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Incls" asp-action="Index">Инклинометры</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Gaps" asp-action="Index">Щелемеры</a>
                         </li>
