--- a/TelemipAdapter/Views/Gaps/Edit.cshtml
+++ b/TelemipAdapter/Views/Gaps/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="InitValue" class="control-label"></label>
                 <input asp-for="InitValue" class="form-control" />
                 <span asp-validation-for="InitValue" class="text-danger"></span>
@@ -21,7 +21,7 @@
                 <label asp-for="Value" class="control-label"></label>
                 <input asp-for="Value" class="form-control" readonly />
                 <span asp-validation-for="Value" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Period" class="control-label"></label>
                 <input asp-for="Period" class="form-control" />
